# fred-webwhois

./: .bumpversion.cfg  .dockerignore  .eslintrc.js  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .license-check-ignore  .pydocstylerc  .stylelintrc  AUTHORS  CHANGELOG.rst  ChangeLog.md  ChangeLog.rst  MANIFEST.in  Makefile  README  README.rst  babel.config.json  constraints.txt  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  webpack.config.js
.copr/: Makefile
assets/js/: main.js  scan_results.js  scan_results_functions.js  webwhois.js
assets/js/tests/: scan_results.test.js  webwhois.test.js
assets/scss/: main.scss
assets/scss/bootstrap/: _alert-errorlist.scss  _form-check.scss  _form-control.scss  _form-select.scss  _variables.scss  bootstrap.scss
contrib/fedora/: apache.conf  fred-webwhois.spec  uwsgi.ini  webwhois_cfg.py
docker/: Dockerfile
docker/python/: Dockerfile
docker/ubuntu:bionic/: Dockerfile
docker/ubuntu:xenial/: Dockerfile
docker/uwsgi/: Dockerfile  docker-entrypoint.sh  webwhois_settings.py  webwhois_urls.py
examples/: webwhois_cfg.py  webwhois_urls.py
settings_webwhois/: webwhois_cfg.example
test_cfg/: settings.py
webwhois/: __init__.py  apps.py  constants.py  context_processors.py  exceptions.py  settings.py  urls.py  views.py
webwhois/constants/: __init__.py  utils.py
webwhois/forms/: __init__.py  fields.py  public_request.py  whois.py  widgets.py
webwhois/templates/: base_site_example.html  contact.html  domain.html  keyset.html  mojeid_form.html  not_found.html  nsset.html  query.html  registrar.html  registrars.html  webwhois_base.html
webwhois/templates/webwhois/: block_main.html  contact.html  domain.html  form_block_object.html  form_personal_info.html  form_public_request.html  form_send_password.html  form_unblock_object.html  form_whois.html  keyset.html  keyset_detail.html  multiple_entries.html  nsset.html  nsset_detail.html  registrar.html  (+10 more)
webwhois/templatetags/: __init__.py  disclose.py  keyset_filters.py  webwhois_filters.py
webwhois/tests/: __init__.py  apps.py  get_registry_objects.py  settings.py  test_apps.py  test_constants.py  test_context_processors.py  test_corba_wrapper.py  test_exceptions.py  test_fields.py  test_form.py  test_form_fields.py  test_form_widgets.py  test_object_detail.py  test_pages.py  test_public_request_mixin.py  test_public_request_views.py  test_record_statement.py  test_registrars.py  test_settings.py  test_templatetags.py  test_utils_cdnskey_client.py  test_utils_deprecation.py  test_utils_dobradomena.py  test_utils_logger.py  test_utils_public_response.py  test_views_logger_mixin.py  test_views_scan_results.py  test_webwhois.py  urls.py  urls_load_registry.py  utils.py  views.py
webwhois/utils/: __init__.py  cdnskey_client.py  corba.py  corba_mock.py  corba_wrapper.py  corbarecoder.py  deprecation.py  dobradomena.py  logger.py  public_response.py
webwhois/views/: __init__.py  base.py  detail_contact.py  detail_domain.py  detail_keyset.py  detail_nsset.py  form_whois.py  logger_mixin.py  pages.py  public_request.py  public_request_mixin.py  record_statement.py  registrar.py  resolve_handle_type.py  scan_results.py
webwhois_site/: manage.py  setup.py
webwhois_site/webwhois_site/: apache.conf  settings.py  urls.py  wsgi.py
webwhois_site/webwhois_standalone/: __init__.py  constants.py  urls.py  views.py
(+31 files in other folders)
