[options]
zip_safe = false

[compile_catalog]
domain = django djangojs
directory = webwhois/locale

[pydocstyle]
convention = google
add_ignore = D1
add_select = D204,D400,D401

[mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[flake8]
max-line-length = 120
max-complexity = 15

[isort]
line_length = 120
known_first_party = webwhois
default_section = THIRDPARTY
combine_as_imports = true
