[metadata]
name = fred-webwhois
version = 2.0.0-rc1
author = Vlastimil Zíma
author_email = vlastimil.zima@nic.cz
description = Fred-webwhois is a Django application with the Whois service for the FRED registry system.
long_description = file: README.rst, CHANGELOG.rst
license = GPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: Name Service (DNS)
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Typing :: Typed

[options]
zip_safe = false
packages = find:
include_package_data = true
python_requires = ~=3.8
install_requires =
    django >=2.2, <4.1
    django-app-settings
    grpcio
    idna
    omniORB ~=4.2.2
    fred-idl ~=2.36.0
    fred-pyfco ~=1.15
    fred-regal ~=0.3.0
    fred-statementor ~=0.1.0
    frgal ~=3.10
    grill ~=1.6
    typist ~=0.5

[options.extras_require]
quality =
    doc8
    flake8
    isort
    mypy
    polint
    pydocstyle
test =
    testfixtures
cdnskey =
    cdnskey-processor-api ~=0.1.0

[compile_catalog]
domain = django djangojs
directory = webwhois/locale

[npm_run]
script = build

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError

[doc8]
max-line-length = 120
allow-long-titles = true

[flake8]
max-line-length = 120
max-complexity = 10

[isort]
line_length = 120
known_first_party = webwhois
combine_as_imports = true

[pydocstyle]
convention = google
add_ignore = D1
add_select = D204,D400,D401

[mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
